# BlockDeletee

./: .gitignore  Cargo.toml  README.md  blocks.json  config.example.json
.github/workflows/: release.yml
packaging/aur/blockdeletee-bin/: .SRCINFO  PKGBUILD  blockdeletee-bin.install  blockdeletee-launcher.sh
src/: backend_bootstrap.rs  main.rs  ui_qt.rs  ui_tui.rs
