[package]
name = "blockdeletee"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
crossterm = "0.29"
crossbeam-channel = "0.5"
ctrlc = "3.4"
glob = "0.3"
qmetaobject = "0.2.10"
ratatui = "0.29"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
vosk = "0.3.1"
